corrections on TrainingSumo task